<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RoughEstimateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.DdrScrollSpeedBoard">

        <LinearLayout
            android:id="@+id/table_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/bus_stop_item_vertical_padding"
            android:paddingBottom="@dimen/bus_stop_item_vertical_padding"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bpm_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/table_header_bpm"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toStartOf="@id/high_speed_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/high_speed_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/table_header_hs"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toStartOf="@id/scroll_speed_header"
                app:layout_constraintStart_toEndOf="@id/bpm_header"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/scroll_speed_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:gravity="end"
                android:text="@string/table_header_scroll_speed"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/high_speed_header"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <com.fias.ddrhighspeed.view.HighSpeedListView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0pt"
            android:requiresFadingEdge="vertical"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>