<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragmentViewModel"
            type="com.fias.ddrhighspeed.SongDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.DdrScrollSpeedBoard"
        tools:context=".EstimateByNameFragment">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/song_name_sample_text"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/song_detail_table_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/song_detail_table_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/bus_stop_item_vertical_padding"
            android:paddingBottom="@dimen/bus_stop_item_vertical_padding"
            app:layout_constraintBottom_toTopOf="@id/song_detail_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_name">

            <TextView
                android:id="@+id/blank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text=""
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/song_detail_list"
                app:layout_constraintEnd_toStartOf="@id/high_speed_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/bpm_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/table_header_bpm"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/song_detail_list"
                app:layout_constraintEnd_toStartOf="@id/high_speed_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/high_speed_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/table_header_hs"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/song_detail_list"
                app:layout_constraintEnd_toStartOf="@id/scroll_speed_header"
                app:layout_constraintStart_toEndOf="@id/bpm_header"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/scroll_speed_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:gravity="end"
                android:text="@string/table_header_scroll_speed"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/song_detail_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/high_speed_header"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <com.fias.ddrhighspeed.view.HighSpeedListView
            android:id="@+id/song_detail_list"
            android:layout_width="match_parent"
            android:layout_height="0pt"
            android:requiresFadingEdge="vertical"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_detail_table_header" />

        <TextView
            android:id="@+id/asterisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="※"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/explain_basic_text"
            app:layout_constraintTop_toBottomOf="@id/song_detail_list" />

        <TextView
            android:id="@+id/explain_basic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="基本①： 曲中で一番使用されているBPMです。\n基本②： 使用されている箇所があり考慮が必要なBPMです。"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_detail_list" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>